// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`react/components/OptionalField > renders correctly - displayed 1`] = `
<div
  class="optional-field "
>
  <div
    id="ui-button"
  >
    {"modifiers":"secondary outlined","label":"SHOW"}
  </div>
</div>
`;

exports[`react/components/OptionalField > renders correctly - hidden 1`] = `
<div
  class="optional-field "
>
  <div
    id="ui-button"
  >
    {"modifiers":"secondary outlined","label":"HIDE"}
  </div>
  <div
    id="field"
  />
</div>
`;
